# runfiles

./: .gitignore  BUILD.bzl  MODULE.bazel  README.adoc  README.md
lib/: BUILD.bazel  runfiles.c
src/: BUILD.bazel  ansi_colors.h  runfiles.c
test/: BUILD.bazel  runfiles_test.c  test_app.c
